Test/dafny0/GhostDatatypeConstructors-Resolution.dfy.expect
GhostDatatypeConstructors-Resolution.dfy(21,13): Error: a ghost discriminator is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(39,9): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(40,9): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(41,9): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(76,20): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(96,25): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(96,25): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(96,25): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(127,4): Error: match expression is not compilable, because it depends on a ghost constructor
GhostDatatypeConstructors-Resolution.dfy(145,4): Error: match expression is not compilable, because it depends on a ghost constructor
GhostDatatypeConstructors-Resolution.dfy(154,11): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(178,11): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(196,7): Error: == can only be applied to expressions of types that support equality (got XY)
GhostDatatypeConstructors-Resolution.dfy(208,11): Error: ghost constructor is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(222,11): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(232,6): Error: ghost constructor is allowed only in specification contexts
16 resolution/type errors detected in GhostDatatypeConstructors-Resolution.dfy
